# Collage-management-system

./: CMakeLists.txt  README.md  Semester.cpp  Semester.h  Student.cpp  Student.h  StudentList.cpp  StudentList.h  Subject.cpp  Subject.h  SubjectList.cpp  SubjectList.h  Teacher.cpp  Teacher.h  TeacherList.cpp  TeacherList.h  main.cpp
